--- a/src/style/setup/_variables.scss
+++ b/src/style/setup/_variables.scss
@@ -6,7 +6,7 @@
   --color-border: #272727;
   --color-border-light: #6b6b6b;
 
-  --color-text: #b1b1b1;
+  --color-text: #bdbdbd;
   --color-text-light: #ffffff;
 
   --color-blue: #6c7ae9;
