Remove text from mission character

--- a/src/style/app/sections/_devs.scss
+++ b/src/style/app/sections/_devs.scss
@@ -21,7 +21,7 @@
       left: unset;
       position: absolute;
       right: 10%;
-      top: 0;
+      top: -5%;
       bottom: unset;
       text-align: left;
 
