--- a/src/style/app/sections/_faq.scss
+++ b/src/style/app/sections/_faq.scss
@@ -81,7 +81,7 @@
         padding: 0 20px;
         font-size: 1.2rem;
         text-decoration: none;
-        margin-top: 5px;
+        // margin-top: 5px;
 
         &:hover {
           background-color: var(--color-blue);
