--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -7,6 +7,7 @@ html {
   background-color: var(--color-bg);
   color: var(--color-text);
   min-height: 100vh;
+  overflow-x: hidden;
 
   * {
     box-sizing: border-box;
