Add users section

--- a/src/style/setup/_variables.scss
+++ b/src/style/setup/_variables.scss
@@ -1,6 +1,7 @@
 :root {
   /* Color properties */
   --color-bg: #0c1016;
+  --color-bg-light: #10151f;
   --color-bg-rgb: 12, 16, 22;
 
   --color-border: #272727;
