Add landing section, re-enable backgrounds, add evening -> night morphing

--- a/src/style/app/_navigation.scss
+++ b/src/style/app/_navigation.scss
@@ -68,10 +68,10 @@
 
           &:hover,
           &.active {
-            color: var(--color-blue);
+            color: var(--color-text-light);
 
             svg {
-              color: var(--color-blue);
+              color: var(--color-text-light);
             }
           }
         }
