Add initial parallax

--- a/src/style/app/sections/_devs.scss
+++ b/src/style/app/sections/_devs.scss
@@ -49,10 +49,10 @@
 
       .brand-item {
         padding: 40px;
-        border-bottom: 1px solid var(--color-border);
+        border-bottom: 1px solid var(--color-border-light);
 
         &:nth-child(odd) {
-          border-right: 1px solid var(--color-border);
+          border-right: 1px solid var(--color-border-light);
         }
 
         &:nth-last-child(1),
