--- a/src/style/setup/_variables.scss
+++ b/src/style/setup/_variables.scss
@@ -5,7 +5,7 @@
   --color-bg-rgb: 12, 16, 22;
 
   --color-border: #272727;
-  --color-border-light: #6b6b6b;
+  --color-border-light: #616161;
 
   --color-text: #bdbdbd;
   --color-text-light: #ffffff;
