--- a/src/style/app/sections/_landing.scss
+++ b/src/style/app/sections/_landing.scss
@@ -1,5 +1,6 @@
 #scene-landing {
-  @include flex(0, center, $d: column);
+  @include flex(0, flex-start, $d: column);
+  padding-top: 17%;
 
   .scene-content {
     text-align: center;
