Update logos, remove gamers section, optimize parallax

--- a/src/style/app/sections/_footer.scss
+++ b/src/style/app/sections/_footer.scss
@@ -20,8 +20,12 @@ footer {
     }
 
     .logo-list {
-      @include flex(80px, flex-start, flex-start, $w: wrap);
-      width: 80%;
+      @include flex(64px, flex-start, flex-start, $w: wrap);
+      width: 95%;
+
+      img {
+        max-height: 56px;
+      }
     }
   }
 
