--- a/src/style/app/_navigation.scss
+++ b/src/style/app/_navigation.scss
@@ -6,8 +6,9 @@
   width: clamp(564px, 50%, 792px);
   border: 1px solid var(--color-border-light);
   border-radius: 24px;
-  background-color: rgba(var(--color-bg-rgb), 0.75);
-  backdrop-filter: blur(15px);
+  background-color: var(--color-bg);
+  // background-color: rgba(var(--color-bg-rgb), 0.75);
+  // backdrop-filter: blur(15px);
   z-index: 100;
   // overflow: hidden;
 
@@ -25,7 +26,9 @@
 
   nav {
     ul {
-      @include grid(0, 4);
+      // @include grid(0, 4);
+      display: grid;
+      gap: 0;
       width: 100%;
       position: relative;
       z-index: 5;
@@ -37,7 +40,7 @@
         left: 0;
         top: 0;
         bottom: 0;
-        width: 25%;
+        // width: 25%;
         border-radius: 24px;
         background-color: rgba(var(--color-blue-rgb), 0.25);
         z-index: -1;
@@ -56,7 +59,7 @@
           height: 48px;
           border-radius: 24px;
           flex: 1;
-          font-size: 1.1rem;
+          font-size: 1.2rem;
           color: var(--color-text);
           text-decoration: none;
 
