--- a/src/style/app/sections/_faq.scss
+++ b/src/style/app/sections/_faq.scss
@@ -1,5 +1,8 @@
 #scene-faq {
   background-color: var(--color-bg);
+  border-bottom: 1px solid var(--color-border);
+  min-height: unset;
+  margin-bottom: 128px;
 
   .container {
     @include grid(80px, 1fr 2fr);
@@ -18,6 +21,12 @@
 
 .faq-item {
   margin-bottom: 20px;
+
+  &:last-child {
+    border-bottom: none !important;
+    margin-bottom: 0 !important;
+    padding-bottom: 0 !important;
+  }
 
   &.is-open {
     .faq-btn {
