--- a/src/style/app/sections/_devs.scss
+++ b/src/style/app/sections/_devs.scss
@@ -39,8 +39,11 @@
     }
 
     .scene-content {
-      margin-bottom: 80px;
       width: 90%;
+    }
+
+    .brand-grid {
+      margin-top: 80px;
     }
 
     ul {
