--- a/src/style/app/sections/_users.scss
+++ b/src/style/app/sections/_users.scss
@@ -7,7 +7,6 @@
     align-items: center;
 
     .scene-content {
-      margin-bottom: 40px;
       position: relative;
 
       h2,
@@ -70,6 +69,7 @@
 
     .brand-grid {
       grid-template-columns: repeat(3, 1fr);
+      margin-top: 40px;
 
       .brand-item {
         @include flex(0, center, center);
@@ -84,45 +84,5 @@
         }
       }
     }
-
-    // ol {
-    //   margin-top: 20px;
-    //   @include grid(16px, 3);
-    //   counter-reset: list;
-
-    //   li {
-    //     @include flex(0, flex-start, flex-start);
-    //     font-size: 1.4rem;
-    //     line-height: 1.3em;
-    //     padding: 16px;
-    //     border-radius: 12px;
-    //     text-align: left;
-    //     // border: 1px solid var(--color-bg-light);
-    //     counter-increment: list;
-    //     position: relative;
-    //     overflow: hidden;
-    //     padding-bottom: 40px;
-    //     color: var(--color-text-light);
-    //     text-shadow: 1px 1px 2px rgba(var(--color-bg-rgb), 0.5);
-
-    //     &:first-child {
-    //       white-space: nowrap;
-    //     }
-
-    //     &:before {
-    //       @include font(700);
-    //       content: counter(list);
-    //       line-height: unset !important;
-    //       position: absolute;
-    //       font-size: 7rem;
-    //       z-index: 1;
-    //       opacity: 0.25;
-    //       bottom: 25%;
-    //       right: 0;
-    //       color: var(--color-bg-light);
-    //       -webkit-text-stroke: 1px var(--color-text);
-    //     }
-    //   }
-    // }
   }
 }
