--- a/src/style/app/_scene.scss
+++ b/src/style/app/_scene.scss
@@ -59,7 +59,7 @@
     @include font(700);
     font-size: 7rem;
     margin-bottom: 30px;
-    margin-left: -4px;
+    // margin-left: -4px;
     text-transform: uppercase;
     color: var(--color-text-light);
   }
@@ -75,8 +75,8 @@
     }
 
     a {
-      @include font(400);
-      color: var(--color-blue);
+      @include font(700);
+      color: var(--color-blue-light);
 
       &:hover {
         text-decoration: none;
