--- a/src/style/app/sections/_users.scss
+++ b/src/style/app/sections/_users.scss
@@ -11,7 +11,7 @@
 
       h2,
       p {
-        text-shadow: 1px 1px 2px rgba(var(--color-bg-rgb), 0.5);
+        // text-shadow: 1px 1px 2px rgba(var(--color-bg-rgb), 0.5);
       }
 
       h2 {
@@ -51,7 +51,7 @@
         padding-left: 24px;
         margin-bottom: 20px;
         color: var(--color-text-light);
-        text-shadow: 1px 1px 2px rgba(var(--color-bg-rgb), 0.5);
+        // text-shadow: 1px 1px 2px rgba(var(--color-bg-rgb), 0.5);
 
         &:after {
           content: "";
@@ -70,14 +70,25 @@
     .brand-grid {
       grid-template-columns: repeat(3, 1fr);
       margin-top: 40px;
+      border-bottom: 1px solid var(--color-border-light);
+      border-top: 1px solid var(--color-border-light);
+
+      &:not(:last-child) {
+        margin-bottom: 40px;
+      }
 
       .brand-item {
         @include flex(0, center, center);
         border: none;
-        border-right: 1px solid var(--color-text);
+        border-right: 1px solid var(--color-border-light);
         text-align: center;
         padding: 20px;
         text-shadow: 1px 1px 2px rgba(var(--color-bg-rgb), 0.5);
+        // text-transform: uppercase;
+
+        p {
+          font-size: 1.8rem;
+        }
 
         &:last-child {
           border-right: 0;
