--- a/src/style/app/sections/_footer.scss
+++ b/src/style/app/sections/_footer.scss
@@ -52,6 +52,7 @@ footer {
       font-size: 1.2rem;
       color: var(--color-text);
       margin: 0;
+      margin-top: 20px;
     }
 
     b {
@@ -60,7 +61,7 @@ footer {
 
     a {
       @include font(700);
-      color: var(--color-blue);
+      color: var(--color-blue) !important;
 
       &:hover {
         text-decoration: none;
