--- a/src/style/app/sections/_landing.scss
+++ b/src/style/app/sections/_landing.scss
@@ -1,6 +1,6 @@
 #scene-landing {
   @include flex(0, flex-start, $d: column);
-  padding-top: 224px;
+  padding-top: 10%;
   z-index: 50;
 
   .title {
@@ -59,12 +59,18 @@
 
       img {
         display: block;
-        width: 726px;
+        width: 692px;
         position: absolute;
         top: 50%;
         right: -30%;
-        transform: translateY(-60%);
+        transform: translateY(-55%);
       }
+    }
+
+    strong,
+    h2,
+    p {
+      text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.25);
     }
 
     strong,
@@ -72,7 +78,6 @@
       @include font(700);
       text-transform: uppercase;
       color: var(--color-bg);
-      // text-shadow: 1px 1px 3px rgba(var(--color-bg-rgb), 0.75);
     }
 
     strong {
@@ -83,24 +88,69 @@
       font-size: 12rem;
       text-transform: uppercase;
       margin-left: -7px;
-      margin-bottom: 24px;
+      margin-bottom: 20px;
     }
 
-    blockquote {
+    p {
+      display: block;
       @include font(400);
+      margin-bottom: 30px;
+      font-size: 1.9rem;
+      line-height: 1.3em;
+      color: var(--color-bg);
+    }
+  }
+}
+
+.scene-quote {
+  @include flex(0, center, center, column);
+  height: 30vh !important;
+  border-bottom: none !important;
+
+  blockquote {
+    @include font(400);
+    font-size: 1.6rem;
+    color: var(--color-text-light);
+    font-style: italic;
+    width: 556px;
+    margin: 0 auto;
+    padding: 40px;
+
+    border-top: 1px solid var(--color-border-light);
+    border-bottom: 1px solid var(--color-border-light);
+
+    p {
       font-size: 1.6rem;
       font-style: italic;
-      color: var(--color-bg);
 
-      & + .from {
-        padding-top: 8px;
+      cite {
+        display: block;
+        padding-top: 15px;
         text-align: right;
-        font-size: 1.2rem;
-        color: var(--color-blue);
-        margin-bottom: 20px;
+        position: relative;
 
-        &:hover a {
-          text-decoration: none;
+        &:before {
+          content: "”";
+          width: 20px;
+          height: 2px;
+          position: absolute;
+          right: 150px;
+          top: -40px;
+          font-size: 15rem;
+          color: var(--color-text);
+          opacity: 0.2;
+        }
+
+        a {
+          @include font(700);
+          text-align: right;
+          display: block;
+          font-size: 1.4rem;
+          color: var(--color-blue-light);
+
+          &:hover {
+            text-decoration: none;
+          }
         }
       }
     }
