--- a/src/style/app/sections/_video.scss
+++ b/src/style/app/sections/_video.scss
@@ -1,4 +1,4 @@
-#section-video {
+#scene-video {
   // border-top: 1px solid var(--color-border);
   // border-bottom: 1px solid var(--color-border);
   background-color: var(--color-bg-light);
