--- a/src/style/app/sections/_users.scss
+++ b/src/style/app/sections/_users.scss
@@ -38,29 +38,29 @@
       background: radial-gradient(rgba(0, 0, 0, 0.2) 0%, rgba(0, 0, 0, 0) 50%);
     }
 
-    ul {
-      li {
-        display: block;
-        font-size: 1.6rem;
-        position: relative;
-        padding-left: 24px;
-        margin-bottom: 20px;
-        color: var(--color-text-light);
-        // text-shadow: 1px 1px 2px rgba(var(--color-bg-rgb), 0.5);
+    // ul {
+    //   li {
+    //     display: block;
+    //     font-size: 1.6rem;
+    //     position: relative;
+    //     padding-left: 24px;
+    //     margin-bottom: 20px;
+    //     color: var(--color-text-light);
+    //     // text-shadow: 1px 1px 2px rgba(var(--color-bg-rgb), 0.5);
 
-        &:after {
-          content: "";
-          display: block;
-          position: absolute;
-          left: 0;
-          top: 6px;
-          width: 6px;
-          height: 6px;
-          background-color: var(--color-text-light);
-          box-shadow: 1px 1px 2px rgba(var(--color-bg-rgb), 0.25);
-        }
-      }
-    }
+    //     &:after {
+    //       content: "";
+    //       display: block;
+    //       position: absolute;
+    //       left: 0;
+    //       top: 6px;
+    //       width: 6px;
+    //       height: 6px;
+    //       background-color: var(--color-text-light);
+    //       box-shadow: 1px 1px 2px rgba(var(--color-bg-rgb), 0.25);
+    //     }
+    //   }
+    // }
 
     .brand-grid {
       grid-template-columns: repeat(3, 1fr);
