--- a/src/style/overrides/_phone.scss
+++ b/src/style/overrides/_phone.scss
@@ -1,11 +1,6 @@
 @media only screen and (max-width: 512px) {
-  .scene-components {
-    padding-bottom: 64px;
-  }
-
   .section-wrap {
     padding: 40px 0;
-    min-height: 80vh;
   }
 
   .container {
@@ -13,19 +8,8 @@
   }
 
   .scene-content {
-    width: 100% !important;
-    strong,
-    h2,
-    p {
-      display: block;
-      text-align: center;
-      transform: translateY(0) !important;
-      animation: unset !important;
-    }
-
     strong {
       font-size: 1rem;
-      margin-bottom: 5px;
     }
 
     h2 {
@@ -37,10 +21,6 @@
     }
 
     blockquote {
-      padding: 20px;
-      max-width: 100%;
-      margin-top: 20px;
-
       p {
         font-size: 1.2rem;
 
@@ -59,84 +39,39 @@
   }
 
   #scene-landing {
-    padding-top: 0;
-
-    .title {
-      @include flex(0px, center, center, column-reverse);
-
-      .img-wrap {
-        img {
-          width: 216px;
-          position: relative;
-          transform: unset;
-          top: unset;
-          right: unset;
-          animation: none !important;
-        }
-      }
-
-      .text {
-        animation: none !important;
-        transform: unset;
-      }
-
-      strong,
-      h2,
-      p {
-        display: block;
-
-        text-align: center;
-      }
-
-      strong {
-        font-size: 1rem;
-      }
-
-      h2 {
-        font-size: 4rem;
-      }
-
-      p {
-        font-size: 1.6rem;
-      }
-
-      .btn-wrap {
-        justify-content: center;
+    .img-wrap {
+      img {
+        width: 216px;
       }
     }
+
+    strong {
+      font-size: 1rem;
+    }
+
+    h2 {
+      font-size: 4rem;
+    }
+
+    p {
+      font-size: 1.6rem;
+    }
+  }
+
+  #navigation {
+    width: 90%;
   }
 
   #scene-users {
     .container {
-      display: block;
-
       .img-wrap {
         img {
           width: 216px;
-          position: relative;
-          transform: unset;
-          top: unset;
-          right: unset;
-          animation: none !important;
-          display: block;
-          margin: auto;
         }
       }
 
-      .brand-grid {
-        margin-top: 20px;
-
-        &:not(:last-child) {
-          margin-bottom: 20px;
-        }
-
-        .brand-item {
-          padding: 10px;
-
-          p {
-            font-size: 1.3rem;
-          }
-        }
+      .brand-grid .brand-item p {
+        font-size: 1.3rem;
       }
     }
   }
@@ -146,29 +81,18 @@
 
     blockquote {
       padding: 20px;
-      max-width: 90%;
 
       p {
         font-size: 1.2rem;
-
-        cite {
-          &:before {
-            font-size: 10rem;
-            right: 10%;
-          }
-
-          a {
-            font-size: 1.2rem;
-          }
-        }
       }
     }
   }
 
   #scene-developers {
-    padding-bottom: 40px;
     .container {
-      display: block;
+      .scene-arrow {
+        display: none;
+      }
 
       .brand-grid {
         margin-top: 20px;
@@ -179,35 +103,14 @@
       }
 
       .img-wrap {
-        position: relative;
-        top: unset;
-        right: unset;
-
         img {
           width: 216px;
-          position: relative;
-          transform: unset;
-          top: unset;
-          right: unset;
-          animation: none !important;
-          display: block;
-          margin: auto;
         }
-      }
-
-      .content {
-        width: 100%;
       }
     }
   }
 
   .brand-grid {
-    margin-top: 20px;
-
-    &:not(:last-child) {
-      margin-bottom: 20px;
-    }
-
     .brand-item {
       padding: 10px;
 
@@ -215,165 +118,22 @@
         font-size: 1.1rem;
       }
 
-      & > div {
-        gap: 5px;
-        justify-content: center;
-        margin-bottom: 10px;
-
-        .icon-wrap {
-          img {
-            max-height: 16px;
-
-            &:last-child {
-              display: none;
-            }
-          }
-        }
-      }
-    }
-  }
-
-  #scene-mission {
-    padding-top: 0;
-
-    .layer-transition {
-      bottom: 100%;
-    }
-
-    .container {
-      @include flex(20px, center, center, column-reverse);
-
-      .img-wrap {
-        position: relative;
-        top: unset;
-        left: unset;
-
-        &:before {
-          width: 280px;
-          height: 280px;
-          left: 50%;
-          // display: none;
-        }
-
-        img {
-          width: 216px;
-          position: relative;
-          transform: unset;
-          top: unset;
-          left: unset;
-          animation: none !important;
-          display: block;
-          margin: auto;
-        }
-      }
-    }
-  }
-
-  #scene-video {
-    padding: 40px 0;
-
-    .video-wrapper {
-      margin-bottom: 40px;
-    }
-
-    .container {
-      .content {
-        p {
-          font-size: 1.4rem;
-          text-align: center;
-          margin-bottom: 20px;
-
-          &:last-child {
-            margin-bottom: 0;
-          }
-        }
-      }
-    }
-  }
-
-  #scene-faq {
-    padding-bottom: 40px;
-    margin-bottom: 40px;
-
-    .container {
-      display: block;
-
-      .scene-content {
-        border-bottom: 1px solid var(--color-border);
-        padding-bottom: 20px;
-        margin-bottom: 20px;
-      }
-
-      .faq-list {
-        padding-top: 0;
+      & > div .icon-wrap img {
+        max-height: 16px;
       }
     }
   }
 
   .faq-item {
-    margin-bottom: 10px;
-
-    &.is-open {
-      margin-bottom: 20px;
-      padding-bottom: 20px;
-    }
-
     .faq-btn {
       font-size: 1.4rem;
-      align-items: flex-start;
-      justify-content: flex-start;
-
-      svg {
-        @include t();
-        // width: 24px !important;
-        // height: 24px !important;
-        line-height: unset;
-        font-size: 20px !important;
-        color: inherit;
-      }
-    }
-
-    .faq-content {
-      padding-left: 0;
-
-      p {
-        font-size: 1.2rem;
-        // text-align: center;
-
-        a {
-          margin-bottom: 5px;
-
-          &:last-child {
-            margin: 0;
-          }
-        }
-      }
     }
   }
 
   footer {
-    padding-bottom: 156px;
     .container {
-      display: block;
-
-      & > div:first-of-type {
-        border-right: none;
-        padding-right: 0;
-        padding-bottom: 20px;
-        margin-bottom: 20px;
-        border-bottom: 1px solid var(--color-border);
-      }
-
-      & > div:last-of-type {
-        padding-left: 0;
-
-        @include flex(0, center, flex-start, column);
-      }
-
       .logo-list {
-        width: 100%;
         gap: 20px;
-        justify-content: center;
 
         img {
           height: 24px;
@@ -382,46 +142,7 @@
     }
 
     .footer-title {
-      display: block;
-      text-align: center;
       font-size: 1rem;
-      width: 100%;
-
-      & + p {
-        margin-bottom: 10px;
-      }
-    }
-
-    p {
-      padding-right: 0;
-      font-size: 1.2rem;
-      text-align: center;
-      margin-bottom: 20px;
-      display: block;
-      width: 100%;
-    }
-
-    .footer-links {
-      width: 100%;
-      justify-content: center;
-      gap: 20px;
-      // padding: 20px;
-    }
-  }
-
-  #navigation {
-    width: 90%;
-    bottom: 1em;
-
-    nav ul {
-      li a {
-        font-size: 0.9rem;
-        height: 40px;
-
-        svg {
-          font-size: 1.4rem;
-        }
-      }
     }
   }
 }
