--- a/src/style/app/_parallax.scss
+++ b/src/style/app/_parallax.scss
@@ -43,13 +43,53 @@
       }
     }
 
-    &:nth-child(3) {
+    &:nth-of-type(2) {
       animation: cloudsRight 150s infinite linear;
       top: -60px;
     }
 
-    &:nth-child(5) {
+    &:nth-of-type(3) {
+      top: -90px;
+    }
+
+    &:nth-of-type(4) {
       animation: cloudsLeft 100s infinite linear;
+    }
+
+    &:nth-of-type(7) {
+      top: 165px;
+    }
+
+    &:nth-of-type(8) {
+      top: 200px;
+    }
+
+    &:nth-of-type(9) {
+      top: 175px;
+    }
+
+    &:nth-of-type(10) {
+      top: 210px;
+    }
+
+    &:nth-of-type(11) {
+      top: 250px;
+    }
+
+    &:nth-of-type(12) {
+      top: 300px;
+    }
+
+    &:nth-of-type(13) {
+      top: 320px;
+    }
+
+    &:nth-of-type(14) {
+      top: 340px;
+    }
+
+    &:nth-of-type(15) {
+      top: 360px;
     }
 
     img {
