--- a/src/style/overrides/_phone.scss
+++ b/src/style/overrides/_phone.scss
@@ -7,6 +7,14 @@
     padding: 0 16px;
   }
 
+  .parallax-wrap {
+    .parallax-item {
+      img {
+        width: 400%;
+      }
+    }
+  }
+
   .scene-content {
     strong {
       font-size: 1rem;
