Add News & Picker sections

--- a/src/style/app/sections/index.scss
+++ b/src/style/app/sections/index.scss
@@ -6,6 +6,8 @@
 @import "./users";
 @import "./landing";
 @import "./video";
+@import "./news";
+@import "./picker";
 
 .brand-grid {
   @include grid(0, 2);
