CSS cleanup, fixes for news section

--- a/src/style/overrides/_phone.scss
+++ b/src/style/overrides/_phone.scss
@@ -114,6 +114,12 @@
     }
   }
 
+  #scene-news {
+    h2 {
+      font-size: 4rem;
+    }
+  }
+
   .brand-grid {
     .brand-item {
       padding: 10px;
