Fix H2 in news section

--- a/src/style/app/sections/_news.scss
+++ b/src/style/app/sections/_news.scss
@@ -4,37 +4,13 @@
   padding: 80px 0;
   overflow: unset;
 
-  .content {
-    display: block;
-
-    p {
-      display: block;
-      font-size: 1.8rem;
-      line-height: 1.6em;
-      color: var(--color-text-light);
-      margin-bottom: 32px;
-
-      &:last-child {
-        margin-bottom: 0;
-      }
-
-      a {
-        @include font(700);
-        color: var(--color-blue-light) !important;
-
-        &:hover {
-          text-decoration: none;
-        }
-      }
-
-      strong {
-        @include font(700);
-      }
-
-      em {
-        font-style: italic;
-      }
-    }
+  h2 {
+    font-family: Inter;
+    font-weight: 700;
+    font-size: 7rem;
+    margin-bottom: 30px;
+    text-transform: uppercase;
+    color: var(--color-text-light);
   }
 
   d-topics-list {
