Remove clever girl from logo, make blue color match

--- a/src/style/setup/_variables.scss
+++ b/src/style/setup/_variables.scss
@@ -10,7 +10,7 @@
   --color-text: #bdbdbd;
   --color-text-light: #ffffff;
 
-  --color-blue: #6c7ae9;
+  --color-blue: #4285f4;
   --color-blue-light: #8a97f7;
   --color-blue-rgb: 108, 122, 233;
 }
