--- a/src/style/app/sections/_news.scss
+++ b/src/style/app/sections/_news.scss
@@ -18,7 +18,7 @@
     background: #fff;
     border-radius: 15px;
     display: block;
-    box-shadow: 0px 0px 5px rgba(0,0,0,0.5);
+    filter: invert(1) hue-rotate(180deg) saturate(1.1); 
 
     iframe {
       width: 100%;
