--- a/src/style/app/sections/_picker.scss
+++ b/src/style/app/sections/_picker.scss
@@ -1,39 +1,26 @@
 #scene-picker {
-  background-color: var(--color-bg-light);
+  background-color: var(--color-bg);
   min-height: unset;
   padding: 80px 0;
   overflow: unset;
 
-  .content {
-    display: block;
+  h2 {
+    font-family: Inter;
+    font-weight: 700;
+    font-size: 7rem;
+    margin-bottom: 30px;
+    text-transform: uppercase;
+    color: var(--color-text-light);
+  }
 
-    p {
-      display: block;
-      font-size: 1.8rem;
-      line-height: 1.6em;
-      color: var(--color-text-light);
-      margin-bottom: 32px;
+  p {
+    font-size: 1.6rem;
+    line-height: 1.6em;
+    color: var(--color-text-light);
+  }
 
-      &:last-child {
-        margin-bottom: 0;
-      }
-
-      a {
-        @include font(700);
-        color: var(--color-blue-light) !important;
-
-        &:hover {
-          text-decoration: none;
-        }
-      }
-
-      strong {
-        @include font(700);
-      }
-
-      em {
-        font-style: italic;
-      }
-    }
+  #image-picker {
+    width: 100%;
+    margin-top: 30px;
   }
 }
