Fix wrong cursor on buttons

--- a/src/style/app/.button.scss
+++ b/src/style/app/.button.scss
@@ -12,6 +12,7 @@
   font-size: 1.4rem;
   text-decoration: none;
   // margin-top: 5px;
+  cursor: pointer;
 
   &:hover {
     background-color: var(--color-blue);
