--- a/src/style/app/sections/_picker.scss
+++ b/src/style/app/sections/_picker.scss
@@ -22,5 +22,7 @@
   #image-picker {
     width: 100%;
     margin-top: 50px;
+    border-bottom: 1px solid var(--color-border);
+    padding-bottom: 50px;
   }
 }
