--- a/src/style/app/sections/_footer.scss
+++ b/src/style/app/sections/_footer.scss
@@ -5,6 +5,27 @@ footer {
   z-index: 100;
   padding-bottom: 20em;
 
+  #contributors {
+    min-height:0px;
+
+    .container {
+      display: block;
+      width: 100%;
+      text-align: center;
+      padding: 0px 0px 40px 0px;
+
+      h2 {
+        font-size: 42px;
+        margin-bottom: 5px;
+      }
+
+      iframe {
+        width: 100%;
+        margin-top: 30px;
+      }
+    }
+  }
+
   .container {
     @include grid(0, 1.5fr 2fr);
 
