Fix tablet font size

--- a/src/style/overrides/_tablet.scss
+++ b/src/style/overrides/_tablet.scss
@@ -313,7 +313,8 @@
   }
 
   #scene-news,
-  #scene-picker {
+  #scene-picker,
+  #contributors {
     h2 {
       font-size: 5rem;
       margin-bottom: 15px;
