Use fully qualified CSS path

--- a/src/style/overrides/_phone.scss
+++ b/src/style/overrides/_phone.scss
@@ -117,7 +117,7 @@
 
   #scene-news,
   #scene-picker,
-  #contributors {
+  footer #contributors .container {
     h2 {
       font-size: 4rem;
     }
