--- a/src/style/overrides/_tablet.scss
+++ b/src/style/overrides/_tablet.scss
@@ -314,7 +314,7 @@
 
   #scene-news,
   #scene-picker,
-  #contributors {
+  footer #contributors .container {
     h2 {
       font-size: 5rem;
       margin-bottom: 15px;
